BusOne02/src/objects/BOT_Thera_Class__c.object
<CustomObject>
    <description>(BOT)It is created by BusinessOne Technologies Inc. It is used to store the Thera class data.</description>
    <fields>
        <fullName>BOT_Specialty_Provider_ID__c</fullName>
        <description>To store the BOT Specialty Provider ID (Entity ID). It is used for BOT internal reference.</description>
        <label>Specialty Provider ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Specialty_Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>It is a Lookup relationship to Account (Specialty provider)</description>
        <label>Specialty Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Therapeutic Category</relationshipLabel>
        <relationshipName>Thera_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Thera_Name__c</fullName>
        <description>To store the Thera class name.</description>
        <label>Thera Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Thera Class</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thera Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>